--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,26 @@
 [tox]
 envlist =
        py27-{flake8,docs},
-       {py27,py33,py34}-django{1.6,1.7,1.8}-drf{2.4,3.0,3.1}
+       {py27,py34,py35}-django1.8-drf{3.0,3.1,3.2,3.3,3.4,3.5,3.6,3.7},
+       {py27,py34,py35,py36}-django1.11-drf3.7,
+       {py34,py35,py36}-django2.0-drf3.7
 
 [testenv]
 commands = ./runtests.py --fast
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django1.6: Django==1.6.11
-       django1.7: Django==1.7.8
-       django1.8: Django==1.8
-       drf2.4: djangorestframework==2.4.4
+       django1.8: Django==1.8.18
+       django1.11: Django==1.11.8
+       django2.0: Django==2.0
        drf3.0: djangorestframework==3.0.5
        drf3.1: djangorestframework==3.1.3
+       drf3.2: djangorestframework==3.2.5
+       drf3.3: djangorestframework==3.3.3
+       drf3.4: djangorestframework==3.4.7
+       drf3.5: djangorestframework==3.5.4
+       drf3.6: djangorestframework==3.6.4
+       drf3.7: djangorestframework==3.7.3
        pytest-django==2.8.0
 
 [testenv:py27-flake8]
