--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
 envlist =
        py27-{flake8,docs},
-       {py27,py33,py34}-django{1.6,1.7,1.8}-drf{2.4,3.0,3.1}
+       {py27,py33,py34}-django1.6-drf{2.4,3.0,3.1,3.2}
+       {py27,py33,py34}-django1.7-drf{2.4,3.0,3.1,3.2,3.3}
+       {py27,py33,py34}-django1.8-drf{2.4,3.0,3.1,3.2,3.3,3.4,3.5,3.6}
 
 [testenv]
 commands = ./runtests.py --fast
@@ -14,6 +16,11 @@ deps =
        drf2.4: djangorestframework==2.4.4
        drf3.0: djangorestframework==3.0.5
        drf3.1: djangorestframework==3.1.3
+       drf3.2: djangorestframework==3.2.*
+       drf3.3: djangorestframework==3.3.*
+       drf3.4: djangorestframework==3.4.*
+       drf3.5: djangorestframework==3.5.*
+       drf3.6: djangorestframework==3.6.*
        pytest-django==2.8.0
 
 [testenv:py27-flake8]
