--- a/.travis.yml
+++ b/.travis.yml
@@ -8,30 +8,54 @@ env:
     - TOX_ENV=py27-django1.6-drf2.4
     - TOX_ENV=py27-django1.6-drf3.0
     - TOX_ENV=py27-django1.6-drf3.1
+    - TOX_ENV=py27-django1.6-drf3.2
     - TOX_ENV=py27-django1.7-drf2.4
     - TOX_ENV=py27-django1.7-drf3.0
     - TOX_ENV=py27-django1.7-drf3.1
+    - TOX_ENV=py27-django1.7-drf3.2
+    - TOX_ENV=py27-django1.7-drf3.3
     - TOX_ENV=py27-django1.8-drf2.4
     - TOX_ENV=py27-django1.8-drf3.0
     - TOX_ENV=py27-django1.8-drf3.1
+    - TOX_ENV=py27-django1.8-drf3.2
+    - TOX_ENV=py27-django1.8-drf3.3
+    - TOX_ENV=py27-django1.8-drf3.4
+    - TOX_ENV=py27-django1.8-drf3.5
+    - TOX_ENV=py27-django1.8-drf3.6
     - TOX_ENV=py33-django1.6-drf2.4
     - TOX_ENV=py33-django1.6-drf3.0
     - TOX_ENV=py33-django1.6-drf3.1
+    - TOX_ENV=py33-django1.6-drf3.2
     - TOX_ENV=py33-django1.7-drf2.4
     - TOX_ENV=py33-django1.7-drf3.0
     - TOX_ENV=py33-django1.7-drf3.1
+    - TOX_ENV=py33-django1.7-drf3.2
+    - TOX_ENV=py33-django1.7-drf3.3
     - TOX_ENV=py33-django1.8-drf2.4
     - TOX_ENV=py33-django1.8-drf3.0
     - TOX_ENV=py33-django1.8-drf3.1
+    - TOX_ENV=py33-django1.8-drf3.2
+    - TOX_ENV=py33-django1.8-drf3.3
+    - TOX_ENV=py33-django1.8-drf3.4
+    - TOX_ENV=py33-django1.8-drf3.5
+    - TOX_ENV=py33-django1.8-drf3.6
     - TOX_ENV=py34-django1.6-drf2.4
     - TOX_ENV=py34-django1.6-drf3.0
     - TOX_ENV=py34-django1.6-drf3.1
+    - TOX_ENV=py34-django1.6-drf3.2
     - TOX_ENV=py34-django1.7-drf2.4
     - TOX_ENV=py34-django1.7-drf3.0
     - TOX_ENV=py34-django1.7-drf3.1
+    - TOX_ENV=py34-django1.7-drf3.2
+    - TOX_ENV=py34-django1.7-drf3.3
     - TOX_ENV=py34-django1.8-drf2.4
     - TOX_ENV=py34-django1.8-drf3.0
     - TOX_ENV=py34-django1.8-drf3.1
+    - TOX_ENV=py34-django1.8-drf3.2
+    - TOX_ENV=py34-django1.8-drf3.3
+    - TOX_ENV=py34-django1.8-drf3.4
+    - TOX_ENV=py34-django1.8-drf3.5
+    - TOX_ENV=py34-django1.8-drf3.6
 
 matrix:
   fast_finish: true
