--- a/tox.ini
+++ b/tox.ini
@@ -10,12 +10,12 @@ commands = ./runtests.py --fast
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django1.6: Django==1.6.11
-       django1.7: Django==1.7.8
-       django1.8: Django==1.8
-       drf2.4: djangorestframework==2.4.4
-       drf3.0: djangorestframework==3.0.5
-       drf3.1: djangorestframework==3.1.3
+       django1.6: Django==1.6.*
+       django1.7: Django==1.7.*
+       django1.8: Django==1.8.*
+       drf2.4: djangorestframework==2.4.*
+       drf3.0: djangorestframework==3.0.*
+       drf3.1: djangorestframework==3.1.*
        drf3.2: djangorestframework==3.2.*
        drf3.3: djangorestframework==3.3.*
        drf3.4: djangorestframework==3.4.*
