Added Django 1.9, 1.10, 1.11 to Travis testing matrix
At this point the testing matrix is massive, somewhere in the range
of 80 different builds. This should probably get cut down at some
point, but that would likely warrant breaking changes or a stable
version support policy (which doesn't currently appear to exist).

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,15 @@ env:
     - TOX_ENV=py27-django1.8-drf3.4
     - TOX_ENV=py27-django1.8-drf3.5
     - TOX_ENV=py27-django1.8-drf3.6
+    - TOX_ENV=py27-django1.9-drf3.3
+    - TOX_ENV=py27-django1.9-drf3.4
+    - TOX_ENV=py27-django1.9-drf3.5
+    - TOX_ENV=py27-django1.9-drf3.6
+    - TOX_ENV=py27-django1.10-drf3.4
+    - TOX_ENV=py27-django1.10-drf3.5
+    - TOX_ENV=py27-django1.10-drf3.6
+    - TOX_ENV=py27-django1.11-drf3.5
+    - TOX_ENV=py27-django1.11-drf3.6
     - TOX_ENV=py33-django1.6-drf2.4
     - TOX_ENV=py33-django1.6-drf3.0
     - TOX_ENV=py33-django1.6-drf3.1
@@ -39,6 +48,15 @@ env:
     - TOX_ENV=py33-django1.8-drf3.4
     - TOX_ENV=py33-django1.8-drf3.5
     - TOX_ENV=py33-django1.8-drf3.6
+    - TOX_ENV=py33-django1.9-drf3.3
+    - TOX_ENV=py33-django1.9-drf3.4
+    - TOX_ENV=py33-django1.9-drf3.5
+    - TOX_ENV=py33-django1.9-drf3.6
+    - TOX_ENV=py33-django1.10-drf3.4
+    - TOX_ENV=py33-django1.10-drf3.5
+    - TOX_ENV=py33-django1.10-drf3.6
+    - TOX_ENV=py33-django1.11-drf3.5
+    - TOX_ENV=py33-django1.11-drf3.6
     - TOX_ENV=py34-django1.6-drf2.4
     - TOX_ENV=py34-django1.6-drf3.0
     - TOX_ENV=py34-django1.6-drf3.1
@@ -56,6 +74,16 @@ env:
     - TOX_ENV=py34-django1.8-drf3.4
     - TOX_ENV=py34-django1.8-drf3.5
     - TOX_ENV=py34-django1.8-drf3.6
+    - TOX_ENV=py34-django1.9-drf3.3
+    - TOX_ENV=py34-django1.9-drf3.4
+    - TOX_ENV=py34-django1.9-drf3.5
+    - TOX_ENV=py34-django1.9-drf3.6
+    - TOX_ENV=py34-django1.10-drf3.4
+    - TOX_ENV=py34-django1.10-drf3.5
+    - TOX_ENV=py34-django1.10-drf3.6
+    - TOX_ENV=py34-django1.11-drf3.5
+    - TOX_ENV=py34-django1.11-drf3.6
+
 
 matrix:
   fast_finish: true
