--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ envlist =
        {py27,py33,py34}-django1.7-drf{2.4,3.0,3.1,3.2,3.3}
        {py27,py33,py34}-django1.8-drf{2.4,3.0,3.1,3.2,3.3,3.4,3.5,3.6}
        {py27,py33,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
-       {py27,py33,py34}-django1.10-drf{3.4,3.5,3.6}
-       {py27,py33,py34}-django1.11-drf{3.5,3.6}
+       {py27,py33,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
+       {py27,py33,py34}-django1.11-drf{3.5,3.6,3.7,3.8}
 
 [testenv]
 commands = ./runtests.py --fast
@@ -27,6 +27,8 @@ deps =
        drf3.4: djangorestframework==3.4.*
        drf3.5: djangorestframework==3.5.*
        drf3.6: djangorestframework==3.6.*
+       drf3.7: djangorestframework==3.7.*
+       drf3.8: djangorestframework==3.8.*
        pytest-django==2.8.0
 
 [testenv:py27-flake8]
