Add Travis testing up to DRF 3.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,12 @@ env:
     - TOX_ENV=py27-django1.10-drf3.4
     - TOX_ENV=py27-django1.10-drf3.5
     - TOX_ENV=py27-django1.10-drf3.6
+    - TOX_ENV=py27-django1.10-drf3.7
+    - TOX_ENV=py27-django1.10-drf3.8
     - TOX_ENV=py27-django1.11-drf3.5
     - TOX_ENV=py27-django1.11-drf3.6
+    - TOX_ENV=py27-django1.11-drf3.7
+    - TOX_ENV=py27-django1.11-drf3.8
     - TOX_ENV=py33-django1.6-drf2.4
     - TOX_ENV=py33-django1.6-drf3.0
     - TOX_ENV=py33-django1.6-drf3.1
@@ -55,8 +59,12 @@ env:
     - TOX_ENV=py33-django1.10-drf3.4
     - TOX_ENV=py33-django1.10-drf3.5
     - TOX_ENV=py33-django1.10-drf3.6
+    - TOX_ENV=py33-django1.10-drf3.7
+    - TOX_ENV=py33-django1.10-drf3.8
     - TOX_ENV=py33-django1.11-drf3.5
     - TOX_ENV=py33-django1.11-drf3.6
+    - TOX_ENV=py33-django1.11-drf3.7
+    - TOX_ENV=py33-django1.11-drf3.8
     - TOX_ENV=py34-django1.6-drf2.4
     - TOX_ENV=py34-django1.6-drf3.0
     - TOX_ENV=py34-django1.6-drf3.1
@@ -81,8 +89,12 @@ env:
     - TOX_ENV=py34-django1.10-drf3.4
     - TOX_ENV=py34-django1.10-drf3.5
     - TOX_ENV=py34-django1.10-drf3.6
+    - TOX_ENV=py34-django1.10-drf3.7
+    - TOX_ENV=py34-django1.10-drf3.8
     - TOX_ENV=py34-django1.11-drf3.5
     - TOX_ENV=py34-django1.11-drf3.6
+    - TOX_ENV=py34-django1.11-drf3.7
+    - TOX_ENV=py34-django1.11-drf3.8
 
 
 matrix:
