--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
        {py27,py33,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
        {py27,py33,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
        {py27,py33,py34}-django1.11-drf{3.5,3.6,3.7,3.8}
+       {py27,py33,py34}-django2.0-drf{3.7,3.8}
 
 [testenv]
 commands = ./runtests.py --fast
@@ -19,6 +20,7 @@ deps =
        django1.9: Django==1.9.*
        django1.10: Django==1.10.*
        django1.11: Django==1.11.*
+       django2.0: Django==2.0.*
        drf2.4: djangorestframework==2.4.*
        drf3.0: djangorestframework==3.0.*
        drf3.1: djangorestframework==3.1.*
