Add Travis testing for Django 2.0
Django 2.0 does not support Python 2.7 and Python 3.3, so it is not
tested on those combinations. It's only tested on Python 3.4.

We are now almost at 100 combinations on Travis...

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
        {py27,py33,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
        {py27,py33,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
        {py27,py33,py34}-django1.11-drf{3.5,3.6,3.7,3.8}
-       {py27,py33,py34}-django2.0-drf{3.7,3.8}
+       {py34}-django2.0-drf{3.7,3.8}
 
 [testenv]
 commands = ./runtests.py --fast
