--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,8 @@ env:
     - TOX_ENV=py34-django1.11-drf3.6
     - TOX_ENV=py34-django1.11-drf3.7
     - TOX_ENV=py34-django1.11-drf3.8
+    - TOX_ENV=py34-django2.0-drf3.7
+    - TOX_ENV=py34-django2.0-drf3.8
 
 
 matrix:
