--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,7 @@ env:
     - TOX_ENV=py34-django1.11-drf3.8
     - TOX_ENV=py34-django2.0-drf3.7
     - TOX_ENV=py34-django2.0-drf3.8
+    - TOX_ENV=py35-django2.1-drf3.8
 
 
 matrix:
