--- a/.travis.yml
+++ b/.travis.yml
@@ -2,82 +2,17 @@ language: python
 
 sudo: false
 
-env:
-    - TOX_ENV=py27-flake8
-    - TOX_ENV=py27-docs
-    - TOX_ENV=py27-django1.8-drf2.4
-    - TOX_ENV=py27-django1.8-drf3.0
-    - TOX_ENV=py27-django1.8-drf3.1
-    - TOX_ENV=py27-django1.8-drf3.2
-    - TOX_ENV=py27-django1.8-drf3.3
-    - TOX_ENV=py27-django1.8-drf3.4
-    - TOX_ENV=py27-django1.8-drf3.5
-    - TOX_ENV=py27-django1.8-drf3.6
-    - TOX_ENV=py27-django1.9-drf3.3
-    - TOX_ENV=py27-django1.9-drf3.4
-    - TOX_ENV=py27-django1.9-drf3.5
-    - TOX_ENV=py27-django1.9-drf3.6
-    - TOX_ENV=py27-django1.10-drf3.4
-    - TOX_ENV=py27-django1.10-drf3.5
-    - TOX_ENV=py27-django1.10-drf3.6
-    - TOX_ENV=py27-django1.10-drf3.7
-    - TOX_ENV=py27-django1.10-drf3.8
-    - TOX_ENV=py27-django1.11-drf3.5
-    - TOX_ENV=py27-django1.11-drf3.6
-    - TOX_ENV=py27-django1.11-drf3.7
-    - TOX_ENV=py27-django1.11-drf3.8
-    - TOX_ENV=py33-django1.8-drf2.4
-    - TOX_ENV=py33-django1.8-drf3.0
-    - TOX_ENV=py33-django1.8-drf3.1
-    - TOX_ENV=py33-django1.8-drf3.2
-    - TOX_ENV=py33-django1.8-drf3.3
-    - TOX_ENV=py33-django1.8-drf3.4
-    - TOX_ENV=py33-django1.8-drf3.5
-    - TOX_ENV=py33-django1.8-drf3.6
-    - TOX_ENV=py33-django1.9-drf3.3
-    - TOX_ENV=py33-django1.9-drf3.4
-    - TOX_ENV=py33-django1.9-drf3.5
-    - TOX_ENV=py33-django1.9-drf3.6
-    - TOX_ENV=py33-django1.10-drf3.4
-    - TOX_ENV=py33-django1.10-drf3.5
-    - TOX_ENV=py33-django1.10-drf3.6
-    - TOX_ENV=py33-django1.10-drf3.7
-    - TOX_ENV=py33-django1.10-drf3.8
-    - TOX_ENV=py33-django1.11-drf3.5
-    - TOX_ENV=py33-django1.11-drf3.6
-    - TOX_ENV=py33-django1.11-drf3.7
-    - TOX_ENV=py33-django1.11-drf3.8
-    - TOX_ENV=py34-django1.8-drf2.4
-    - TOX_ENV=py34-django1.8-drf3.0
-    - TOX_ENV=py34-django1.8-drf3.1
-    - TOX_ENV=py34-django1.8-drf3.2
-    - TOX_ENV=py34-django1.8-drf3.3
-    - TOX_ENV=py34-django1.8-drf3.4
-    - TOX_ENV=py34-django1.8-drf3.5
-    - TOX_ENV=py34-django1.8-drf3.6
-    - TOX_ENV=py34-django1.9-drf3.3
-    - TOX_ENV=py34-django1.9-drf3.4
-    - TOX_ENV=py34-django1.9-drf3.5
-    - TOX_ENV=py34-django1.9-drf3.6
-    - TOX_ENV=py34-django1.10-drf3.4
-    - TOX_ENV=py34-django1.10-drf3.5
-    - TOX_ENV=py34-django1.10-drf3.6
-    - TOX_ENV=py34-django1.10-drf3.7
-    - TOX_ENV=py34-django1.10-drf3.8
-    - TOX_ENV=py34-django1.11-drf3.5
-    - TOX_ENV=py34-django1.11-drf3.6
-    - TOX_ENV=py34-django1.11-drf3.7
-    - TOX_ENV=py34-django1.11-drf3.8
-    - TOX_ENV=py34-django2.0-drf3.7
-    - TOX_ENV=py34-django2.0-drf3.8
-    - TOX_ENV=py35-django2.1-drf3.8
-
+python:
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
 
 matrix:
   fast_finish: true
 
 install:
-  - pip install tox
+  - pip install tox tox-travis
 
 script:
-    - tox -e $TOX_ENV
+    - tox
