--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
   fast_finish: true
 
 install:
-  - pip install tox<3 tox-travis
+  - pip install tox==2.9.* tox-travis
 
 script:
     - tox
