--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ sudo: false
 
 python:
   - "2.7"
-  - "3.3"
   - "3.4"
   - "3.5"
 
@@ -12,7 +11,7 @@ matrix:
   fast_finish: true
 
 install:
-  - pip install tox==2.9.* tox-travis
+  - pip install tox tox-travis
 
 script:
     - tox
