--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist =
        py27-{flake8,docs},
-       {py27,py33,py34}-django1.8-drf{2.4,3.0,3.1,3.2,3.3,3.4,3.5,3.6}
-       {py27,py33,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
-       {py27,py33,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
-       {py27,py33,py34}-django1.11-drf{3.5,3.6,3.7,3.8}
+       {py27,py34}-django1.8-drf{2.4,3.0,3.1,3.2,3.3,3.4,3.5,3.6}
+       {py27,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
+       {py27,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
+       {py27,py34}-django1.11-drf{3.5,3.6,3.7,3.8}
        {py34}-django2.0-drf{3.7,3.8}
        {py35}-django2.1-drf{3.8}
 
@@ -29,7 +29,7 @@ deps =
        drf3.6: djangorestframework==3.6.*
        drf3.7: djangorestframework==3.7.*
        drf3.8: djangorestframework==3.8.*
-       pytest-django==2.8.0
+       pytest-django==3.4.*
 
 [testenv:py27-flake8]
 commands = ./runtests.py --lintonly
