--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,11 @@
 envlist =
        py27-{flake8,docs},
        {py27,py34}-django1.8-drf{2.4,3.0,3.1,3.2,3.3,3.4,3.5,3.6}
+       {py35}-django1.8-drf{3.5,3.6}
        {py27,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
+       {py35}-django1.9-drf{3.5,3.6}
        {py27,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
+       {py35}-django1.10-drf{3.5,3.6,3.7,3.8}
        {py27,py34,py35}-django1.11-drf{3.5,3.6,3.7,3.8}
        {py34,py35}-django2.0-drf{3.7,3.8}
        {py35}-django2.1-drf{3.8}
