Added support for DRF 3.9
This adds DRF 3.9 to the Tox environment list.

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@ envlist =
        {py35}-django1.9-drf{3.5,3.6}
        {py27,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
        {py35}-django1.10-drf{3.5,3.6,3.7,3.8}
-       {py27,py34,py35}-django1.11-drf{3.5,3.6,3.7,3.8}
-       {py34,py35}-django2.0-drf{3.7,3.8}
-       {py35}-django2.1-drf{3.8}
+       {py27,py34,py35}-django1.11-drf{3.5,3.6,3.7,3.8,3.9}
+       {py34,py35}-django2.0-drf{3.7,3.8,3.9}
+       {py35}-django2.1-drf{3.8,3.9}
 
 [testenv]
 commands = ./runtests.py --fast
@@ -32,6 +32,7 @@ deps =
        drf3.6: djangorestframework==3.6.*
        drf3.7: djangorestframework==3.7.*
        drf3.8: djangorestframework==3.8.*
+       drf3.9: djangorestframework==3.9.*
        pytest-django==3.4.*
 
 [testenv:py27-flake8]
