--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ envlist =
        {py27,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
        {py35}-django1.10-drf{3.5,3.6,3.7,3.8}
        {py27,py34,py35}-django1.11-drf{3.5,3.6,3.7,3.8,3.9}
-       {py34,py35}-django2.0-drf{3.7,3.8,3.9}
-       {py35}-django2.1-drf{3.8,3.9}
+       {py36}-django1.11-drf{3.7,3.8,3.9}
+       {py34,py35,py36}-django2.0-drf{3.7,3.8,3.9}
+       {py35,py36}-django2.1-drf{3.8,3.9}
 
 [testenv]
 commands = ./runtests.py --fast
