--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ envlist =
        {py36}-django1.11-drf{3.7,3.8,3.9}
        {py34,py35,py36}-django2.0-drf{3.7,3.8,3.9}
        {py35,py36}-django2.1-drf{3.8,3.9}
+       {py36}-django3.0-drf{3.8,3.9,3.10}
 
 [testenv]
 commands = ./runtests.py --fast
@@ -23,6 +24,7 @@ deps =
        django1.11: Django==1.11.*
        django2.0: Django==2.0.*
        django2.1: Django==2.1.*
+       django3.0: Django==3.0.*
        drf2.4: djangorestframework==2.4.*
        drf3.0: djangorestframework==3.0.*
        drf3.1: djangorestframework==3.1.*
@@ -34,6 +36,7 @@ deps =
        drf3.7: djangorestframework==3.7.*
        drf3.8: djangorestframework==3.8.*
        drf3.9: djangorestframework==3.9.*
+       drf3.10: djangorestframework==3.10.*
        pytest-django==3.4.*
 
 [testenv:py27-flake8]
