--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,77 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+---
+  name: CI
 
-name: Python package
+  on:
+    push:
+      branches: ["master"]
+    pull_request:
+      branches: ["master"]
+    # Allow rebuilds via API.
+    repository_dispatch:
+      types: rebuild
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  jobs:
+    tests:
+      name: "Python ${{ matrix.python-version }} on ${{ matrix.platform }}"
+      runs-on: "${{ matrix.platform }}"
+      env:
+        USING_COVERAGE: '3.8'
 
-jobs:
-  build:
+      strategy:
+        matrix:
+          platform: ["ubuntu-latest"]
+          python-version: ["3.5", "3.6", "3.7", "3.8"]
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+      steps:
+        - uses: "actions/checkout@v2"
+        - uses: "actions/setup-python@v1"
+          with:
+            python-version: "${{ matrix.python-version }}"
+        - name: "Install dependencies"
+          run: |
+            python -VV
+            python -m site
+            python -m pip install --upgrade pip setuptools wheel
+            python -m pip install --upgrade virtualenv tox tox-gh-actions
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
+        - name: "Run tox targets for ${{ matrix.python-version }}"
+          run: "python -m tox"
+          env:
+            PLATFORM: ${{ matrix.platform }}
+
+    package:
+      name: "Build & verify package"
+      runs-on: "ubuntu-latest"
+
+      steps:
+        - uses: "actions/checkout@v2"
+        - uses: "actions/setup-python@v1"
+          with:
+            python-version: "3.8"
+
+        - name: "Install pep517 and twine"
+          run: "python -m pip install pep517 twine"
+        - name: "Build package"
+          run: "python -m pep517.build --source --binary ."
+        - name: "List result"
+          run: "ls -l dist"
+        - name: "Check long_description"
+          run: "python -m twine check dist/*"
+
+    install-dev:
+      strategy:
+        matrix:
+          os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+
+      name: "Verify dev env"
+      runs-on: "${{ matrix.os }}"
+
+      steps:
+        - uses: "actions/checkout@v2"
+        - uses: "actions/setup-python@v1"
+          with:
+            python-version: "3.8"
+        - name: "Install in dev mode"
+          run: "python -m pip install -e .[dev]"
+        - name: "Import package"
+          run: "python -c 'import rest_framework_xml; print(rest_framework_xml.__version__)'"
