--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,46 @@
+[pytest]
+strict = true
+addopts = -ra
+testpaths = tests
+filterwarnings =
+    once::Warning
+    ignore:::pympler[.*]
+
+
+[gh-actions]
+python =
+    3.5: py35
+    3.6: py36
+    3.7: py37
+    3.8: py38, lint, docs
+
+
 [tox]
 envlist =
-       py27-{flake8,docs},
-       {py27,py34}-django1.8-drf{2.4,3.0,3.1,3.2,3.3,3.4,3.5,3.6}
-       {py35}-django1.8-drf{3.5,3.6}
-       {py27,py34}-django1.9-drf{3.3,3.4,3.5,3.6}
-       {py35}-django1.9-drf{3.5,3.6}
-       {py27,py34}-django1.10-drf{3.4,3.5,3.6,3.7,3.8}
-       {py35}-django1.10-drf{3.5,3.6,3.7,3.8}
-       {py27,py34,py35}-django1.11-drf{3.5,3.6,3.7,3.8,3.9}
-       {py36}-django1.11-drf{3.7,3.8,3.9}
-       {py34,py35,py36}-django2.0-drf{3.7,3.8,3.9}
-       {py35,py36}-django2.1-drf{3.8,3.9}
+       lint
+       {py35,py36,py37}-django2.2-drf3.11
+       {py36,py37,py38}-django3.0-drf3.11
+       docs
+isolated_build = True
+
 
 [testenv]
-commands = ./runtests.py --fast
-setenv =
-       PYTHONDONTWRITEBYTECODE=1
+commands = pytest {posargs}
 deps =
-       django1.8: Django==1.8.*
-       django1.9: Django==1.9.*
-       django1.10: Django==1.10.*
-       django1.11: Django==1.11.*
-       django2.0: Django==2.0.*
-       django2.1: Django==2.1.*
-       drf2.4: djangorestframework==2.4.*
-       drf3.0: djangorestframework==3.0.*
-       drf3.1: djangorestframework==3.1.*
-       drf3.2: djangorestframework==3.2.*
-       drf3.3: djangorestframework==3.3.*
-       drf3.4: djangorestframework==3.4.*
-       drf3.5: djangorestframework==3.5.*
-       drf3.6: djangorestframework==3.6.*
-       drf3.7: djangorestframework==3.7.*
-       drf3.8: djangorestframework==3.8.*
-       drf3.9: djangorestframework==3.9.*
-       pytest-django==3.4.*
+       django2.2: Django==2.2.*
+       django3.0: Django==3.0.*
+       drf3.11: djangorestframework==3.11.*
+       pytest-django
 
-[testenv:py27-flake8]
-commands = ./runtests.py --lintonly
-deps =
-       pytest==2.7.0
-       flake8==2.4.0
 
-[testenv:py27-docs]
+[testenv:lint]
+basepython = python3.8
+extras = dev
+passenv = HOMEPATH  # needed on Windows
+commands = pre-commit run --all-files
+
+
+[testenv:docs]
+basepython = python3.8
+extras = docs
 commands = mkdocs build
-deps =
-       mkdocs>=0.11.1
