feat: add support official python django versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,46 +1,41 @@
 [pytest]
-strict = true
 addopts = -ra
 testpaths = tests
 filterwarnings =
     once::Warning
     ignore:::pympler[.*]
 
-
 [gh-actions]
 python =
-    3.5: py35
-    3.6: py36
-    3.7: py37
-    3.8: py38, lint, docs
-
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311, lint, docs
 
 [tox]
 envlist =
-       lint
-       {py35,py36,py37}-django2.2-drf3.11
-       {py36,py37,py38}-django3.0-drf3.11
-       docs
+    lint
+    py{38, 39, 310}-django{3.2, 4.1, 4.2}-drf3.14
+    py{311}-django{4.1, 4.2}-drf3.14
+    docs
 isolated_build = True
-
 
 [testenv]
 commands = pytest {posargs}
 deps =
-       django2.2: Django==2.2.*
-       django3.0: Django==3.0.*
-       drf3.11: djangorestframework==3.11.*
-       pytest-django
-
+    django3.2: Django==3.2.*
+    django4.1: Django==4.1.*
+    django4.2: Django==4.2.*
+    drf3.14: djangorestframework==3.14.*
+    pytest-django
 
 [testenv:lint]
-basepython = python3.8
+basepython = python3.11
 extras = dev
-passenv = HOMEPATH  # needed on Windows
+passenv = HOMEPATH                    # needed on Windows
 commands = pre-commit run --all-files
 
-
 [testenv:docs]
-basepython = python3.8
+basepython = python3.11
 extras = docs
 commands = mkdocs build
